# fieldscope

./: .gitignore  pyproject.toml  spec_doc.md
scripts/: demo_seeds.py
src/fieldscope/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/fieldscope/embeddings/: base.py  openai_compatible.py  sentence_transformers.py
src/fieldscope/llm/: client.py
src/fieldscope/stages/: citation_expansion.py  clustering.py  evolution.py  filtering.py  keyword_expansion.py  labeling.py  maturity.py  reporting.py  retrieval.py  seed_validation.py  seeds.py
tests/: conftest.py  test_cli.py
tests/fixtures/: openalex_cited_by.json  openalex_search.json
tests/integration/: test_openrouter.py
tests/unit/: test_citation_expansion.py  test_clustering.py  test_config.py  test_embeddings.py  test_evolution.py  test_filtering.py  test_keyword_expansion.py  test_labeling.py  test_llm_client.py  test_maturity.py  test_models.py  test_orchestrator.py  test_pipeline.py  test_reporting.py  test_retrieval.py  test_seed_validation.py  test_seeds.py
