[project]
name = "fieldscope"
version = "0.1.0"
description = "Bibliometric analysis toolkit for research field definition and evolution"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "keybert>=0.8",
    "httpx>=0.25",
    "click>=8.1",
    "rich>=13.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
fieldscope = "fieldscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldscope"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
